Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-23351

QAP windows plugin failed to run under windows XP.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.0.0
    • 5.0.0
    • Other
    • None
    • 50e18de5161633802a88bd405b7c33cfcaaca3f7

    Description

      from: platforms/windows/qwindowscontext.cpp

      QWindowsUser32DLL::init()
      {
      ...
          updateLayeredWindowIndirect = (UpdateLayeredWindowIndirect)(library.resolve("UpdateLayeredWindowIndirect"));
      
          Q_ASSERT(setLayeredWindowAttributes && updateLayeredWindow
                   && updateLayeredWindowIndirect);
      
      

      As Windows XP does not have the api UpdateLayeredWindowIndirect, so the assert will fail.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kleint Friedemann Kleint
            dbzhang800 debao zhang
            Votes:
            1 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes